# ToolCallBridge

./: README.md  main.py  pyproject.toml
examples.py/: function_call.py
toolcall_bridge/: app.py  client.py  configs.py  protocol.py  router.py  tool_parser.py  tool_prompt_templates.py
